--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -78,10 +78,10 @@
     margin-bottom: var(--mb-6);
   }
 
-  .section-title::after {
+  /* .section-title::after {
     width: 100px;
     top: 2rem;
-  }
+  } */
 
   .nav {
     height: calc(var(--header-height) + 1.5rem);
@@ -185,10 +185,10 @@
     font-size: xx-large;
   }
 
-  .section-title::after {
+  /* .section-title::after {
     width: 150px;
     top: 3rem;
-  }
+  } */
 
   /* ===== CIJENIK ===== */
   .cijenik {
@@ -218,4 +218,8 @@
   .masonry-item:hover {
     transform: scale(1.05);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .section-title {
+    margin-top: 4rem;
   }
