Napisan text Radovi i O nama te zamjenjene pozicije istih, izbčene slike iz obje sekcij

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,8 @@ img {
 }
 
 .skills__subtitle {
-  margin-bottom: var(--mb-2);
+  margin-bottom: var(--mb-4);
+  text-align: center;
 }
 
 .skills__text {
