--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -34,17 +34,7 @@
     width: 300px;
   }
 
-  .about__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    text-align: initial;
-  }
 
-  .skills__container {
-    grid-template-columns: .7fr;
-    justify-content: center;
-    column-gap: 1rem;
-  }
 
   .work__container {
     grid-template-columns: repeat(2, 1fr);
@@ -127,12 +117,24 @@
   }
 
   .about__container {
-    padding-top: 2rem;
+    padding-top: 1rem;
   }
 
   .about__img img {
     width: 400px;
   }
+
+    .about__container {
+    /* grid-template-columns: repeat(2, 1fr); */
+    align-items: center;
+    text-align: center;
+  }
+
+  /* .skills__container {
+    grid-template-columns: .7fr;
+    justify-content: center;
+    column-gap: 1rem;
+  } */
 
   .skills__container {
     grid-template-columns: repeat(2, 1fr);
