--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,7 +454,8 @@ img {
 .masonry-item img {
   width: 100%;
   display: block;
-  border-radius: 4px;
+  height: 220px;
+  object-fit: cover;
 }
 
 .masonry-item p {
